feat: run translate script for estates

--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -47,6 +47,19 @@
     "invalid":
       "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
   },
+  "estate": {
+    "acquired_at": "TK0에서 획득",
+    "created_at": "만든 {date}"
+  },
+  "estate_edit": {
+    "description": "기술",
+    "edit_estate": "부동산 편집",
+    "name": "이름",
+    "subtitle": "이름과 설명을 설정하고 재산에 대한 소포를 편집하십시오."
+  },
+  "estate_select": {
+    "selection": "새 부동산에 대한 소포를 선택하십시오."
+  },
   "footer": {
     "color_key": "색상 키",
     "copyright": "© 2018 Decentraland. 판권 소유.",
@@ -68,7 +81,10 @@
     "confirm": "확인",
     "connect": "잇다",
     "connecting": "연결 중",
+    "continue": "잇다",
     "contributions": "공헌",
+    "estate": "재산",
+    "estates": "부동산",
     "expired_at": "만료 됨 {time}",
     "expires_in": "만료 {time}",
     "expires_in_more_than_years": "{years} 년 이상 만료 됨",
@@ -170,6 +186,7 @@
   "parcel_detail": {
     "actions": {
       "cancel": "판매취소",
+      "create_estate": "부동산 만들기",
       "edit": "편집",
       "permissions": "권한",
       "sell": "판매",
