--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -48,6 +48,20 @@
     "invalid":
       "Vous avez défini un mauvais chemin de dérivation pour votre portefeuille. Votre chemin de dérivation doit suivre le modèle 44 '/ 60 | 61' / x '/ n"
   },
+  "estate": {
+    "acquired_at": "Acquis à {date}",
+    "created_at": "Créé à {date}"
+  },
+  "estate_edit": {
+    "description": "La description",
+    "edit_estate": "Modifier le domaine",
+    "name": "Prénom",
+    "subtitle":
+      "Définissez un nom et une description et modifiez les parcelles de votre succession."
+  },
+  "estate_select": {
+    "selection": "Sélectionnez les parcelles pour votre nouveau domaine"
+  },
   "footer": {
     "color_key": "Code Couleur",
     "copyright": "© 2018 Decentraland. Tous droits reservés.",
@@ -69,7 +83,10 @@
     "confirm": "Confirmer",
     "connect": "Connection",
     "connecting": "Connexion",
+    "continue": "Continuer",
     "contributions": "Contributions",
+    "estate": "Biens",
+    "estates": "Estates",
     "expired_at": "Expiré {time}",
     "expires_in": "Expire {time}",
     "expires_in_more_than_years": "Expire dans plus de {years} ans",
@@ -176,6 +193,7 @@
   "parcel_detail": {
     "actions": {
       "cancel": "Annuler la vente",
+      "create_estate": "Créer un domaine",
       "edit": "Edition",
       "permissions": "Autorisations",
       "sell": "Vendre",
