--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -3,40 +3,40 @@
     "completed": "已完成",
     "no_activity": "您还没有活动。",
     "pending": "待定",
-    "start": "您可以先在您的设置页面{settings_link}上批准一些MANA"
+    "start": "您可以先在您的设置页面{settings_link}上购买一些 MANA"
   },
   "address": {
-    "its_you": "是你"
+    "its_you": "你的"
   },
   "atlas": {
     "loading": "载入中",
-    "no_owner": "没有所有者",
+    "no_owner": "无主地",
     "on_sale": "出售中：",
     "owner": "所有者：{owner}",
     "road": "路",
     "your_parcel": "您的地块"
   },
   "buy_mana": {
-    "action": "购买更多",
-    "amount_too_big": "Bancor Network的这个数额太大了",
+    "action": "购买",
+    "amount_too_big": "对于 Bancor Network 来说数量过高",
     "available_eth": "可用：{eth} ETH",
-    "not_enough": "你没有足够的ETH来支付这个费用",
-    "pay_with": "付款",
-    "powered_by": "由{bancor_link}提供",
-    "rate": "率",
-    "receive": "收到",
-    "slippage": "滑移",
-    "title": "将ETH转换为MANA"
+    "not_enough": "你没有足够用于支付的 ETH",
+    "pay_with": "需支付",
+    "powered_by": "由 {bancor_link} 提供",
+    "rate": "兑换率",
+    "receive": "你将收到",
+    "slippage": "误差",
+    "title": "使用 ETH 兑换 MANA"
   },
   "color_key": {
     "contribution": "小区份额",
     "district": "小区",
     "loading": "加载中",
-    "on_sale": "出售",
+    "on_sale": "出售中",
     "plaza": "广场",
     "roads": "道路",
-    "taken": "已被占有",
-    "title": "色彩标记",
+    "taken": "已售",
+    "title": "图示",
     "unowned": "无主",
     "yours": "您的土地"
   },
@@ -45,14 +45,14 @@
   },
   "derivation_path": {
     "invalid":
-      "您为钱包设置了错误的派生路径。 你的派生路径必须遵循模式 44'/60|61'/x'/n"
+      "错误的钱包路径设置。 你的钱包路径格式应该为 44'/60|61'/x'/n"
   },
   "footer": {
-    "color_key": "色彩标记",
+    "color_key": "图示",
     "copyright": "© 2018 Decentraland。保留所有权利。",
     "mini_copyright": "© 2018 Decentraland.",
     "privacy_policy": "隐私政策",
-    "terms": "条款和条件"
+    "terms": "服务条款"
   },
   "global": {
     "activity": "活动",
@@ -66,40 +66,40 @@
     "click_here": "点击这里",
     "community_chat": "社区聊天",
     "confirm": "确认",
-    "connect": "잇다",
-    "connecting": "连",
+    "connect": "连接",
+    "connecting": "正在连接",
     "contributions": "小区份额",
-    "expired_at": "已过期{time}",
-    "expires_in": "到期{time}",
-    "expires_in_more_than_years": "超过{years}年到期",
+    "expired_at": "截止时间 {time}",
+    "expires_in": "到期时间 {time}",
+    "expires_in_more_than_years": "{years} 年以上到期",
     "for": "对于",
     "loading": "载入中",
     "marketplace": "虚拟物品市场",
     "mortgage": "抵押",
     "mortgages": "抵押贷款",
     "owned_by": "拥有",
-    "owned_by_link": "{address_link} 소유",
+    "owned_by_link": "由 {address_link} 拥有",
     "parcels": "地块",
     "profile": "我的虚拟土地",
     "request": "请求",
-    "retry": "다시 해 보다",
+    "retry": "重试",
     "revoke": "撤消",
     "settings": "设置",
     "sign_in": "登录",
-    "sign_in_notice": "您需要{sign_in_link}才能访问此页面",
+    "sign_in_notice": "请登录 {sign_in_link} 后访问此页面",
     "submit": "提交",
     "time_left": "剩下的时间",
     "unauthorized": "未授权",
-    "undo": "解开",
+    "undo": "撤消",
     "wallet_address": "钱包地址",
     "website": "网站"
   },
   "homepage": {
-    "get_started": "现在就开始",
-    "hero_subtitle": "去中心化虚拟土地市场。免交易费。",
-    "hero_title": "在\"创世纪城\"中挑选你的梦想领地",
-    "newest_lands": "最新上架虚拟土地",
-    "view_more": "查看更多",
+    "get_started": "让我们开始吧",
+    "hero_subtitle": "去中心化虚拟土地市场。免交易费！",
+    "hero_title": "在\"创世纪城\"中购买你的梦想领地",
+    "newest_lands": "最新上架",
+    "view_more": "更多",
     "watch_tutorial": "观看教程"
   },
   "languages": {
@@ -113,37 +113,37 @@
     "empty": "噢......这里没有任何东西。",
     "filter": {
       "cheapest": "最低价",
-      "close_to_expire": "最近到期",
+      "close_to_expire": "临近到期",
       "newest": "最新出售"
     }
   },
   "mortgage": {
-    "amount": "量",
-    "amount_placeholder": "MANA中的金额",
+    "amount": "金额",
+    "amount_placeholder": "MANA 金额",
     "cancel": "取消抵押",
     "duration": "持续时间",
     "duration_placeholder": "持续时间以天计",
     "errors": {
-      "amount_minimum": "金额应该大于{amount}",
-      "duration_gte_payable": "持续时间应该大于或等于在天付款",
+      "amount_minimum": "金额应该大于 {amount}",
+      "duration_gte_payable": "持续时间应该大于或等于付款期限",
       "maximum_interest_rate": "费率应低于{maximum}",
       "minimum_duration": "持续时间应该大于{minimum}天",
       "minimum_interest_rate": "费率应该大于{minimum}",
-      "minimum_payable": "应付时间应大于{minimum}天",
-      "parcel_price": "所需金额应低于包裹价格"
+      "minimum_payable": "付款时间应大于{minimum}天",
+      "parcel_price": "所需金额应低于地块价格"
     },
-    "expiration": "请求到期",
+    "expiration": "申请到期",
     "expiration_placeholder": "抵押的到期日期",
     "interest_rate": "利率",
     "interest_rate_placeholder": "利率",
-    "oracle": "Oracle合同地址",
+    "oracle": "Oracle 合约地址",
     "payable": "应付",
     "payable_placeholder": "应付天数",
     "punitory_rate": "惩罚性利率",
     "punitory_rate_placeholder": "惩罚率",
-    "request": "要求抵押",
-    "request_land": "您即将为{parcel_price}中的{parcel_name}申请抵押贷款",
-    "requested": "要求"
+    "request": "申请抵押",
+    "request_land": "您将为{parcel_name}地块以{parcel_price}的价格申请抵押贷款",
+    "requested": "已申请"
   },
   "parcel": {
     "no_description": "没有说明",
@@ -152,19 +152,19 @@
   },
   "parcel_buy": {
     "about_to_buy": "您即将购买{parcel_name}",
-    "approved_balance": "您的已批准MANA余额为{approved_balance}",
+    "approved_balance": "您能使用的余额是{approved_balance}",
     "buy_land": "购买土地",
-    "buy_mana": "{click_here}购买一些MANA。",
-    "didnt_approve": "您没有批准使用MANA",
-    "needs_at_least": "为了购买这块土地，您至少需要{mana}MANA。",
+    "buy_mana": "{click_here}购买一些 MANA。",
+    "didnt_approve": "您没有批准使用 MANA",
+    "needs_at_least": "为了购买这块土地，您至少需要 {mana} MANA。",
     "please_approve":
-      "请前往{settings_link}，让Marketplace合约以您的名义操作MANA",
+      "请前往{settings_link}，允许 Marketplace 合约以您的名义使用 MANA",
     "total_balance": "您的余额是{balance}"
   },
   "parcel_cancel": {
-    "about_to_cancel": "您即将取消{parcel}的销售。",
+    "about_to_cancel": "您即将取消{parcel}的出售。",
     "cancel_land": "取消土地出售",
-    "not_for_sale": "包裹{parcel}不出售。"
+    "not_for_sale": "地块{parcel}不出售。"
   },
   "parcel_detail": {
     "actions": {
@@ -180,14 +180,14 @@
       "auction": "拍卖",
       "event": "事件",
       "from": "从",
-      "price": "价钱",
-      "sold": "文塔",
+      "price": "价格",
+      "sold": "出售",
       "title": "交易历史",
       "to": "至",
-      "when": "什么时候"
+      "when": "日期"
     },
     "owner": {
-      "no_owner": "没有所有者",
+      "no_owner": "无主",
       "part_of": "{name}的一部分"
     },
     "publication": {
@@ -196,9 +196,9 @@
       "price": "价格"
     },
     "tags": {
-      "title": "强调"
+      "title": "着重说明"
     },
-    "view": "在地图集上查看"
+    "view": "在地图上查看"
   },
   "parcel_edit": {
     "description": "描述",
@@ -208,33 +208,33 @@
   },
   "parcel_manage": {
     "address": "运营商地址",
-    "address_permission": "这个地址将能够更新这个包裹的内容。",
+    "address_permission": "此地址将有权更新地块的内容。",
     "check_address": "请仔细检查地址",
-    "give_permission": "授予更新{parcel_name}的内容的权限。",
-    "manage_land": "管理LAND"
+    "give_permission": "授予更新 {parcel_name} 的内容的权限。",
+    "manage_land": "地块管理"
   },
   "parcel_publish": {
-    "already_sold": "这块虚拟土地已以{value}价格在出售中",
+    "already_sold": "这块虚拟土地已以 {value} 价格出售中",
     "errors": {
-      "maximum_expiration": "最大到期日期是{date}",
-      "maximum_land_price": "最大的LAND价格是{值} MANA",
-      "minimum_expiration": "最短有效期限为一天",
-      "minimum_land_price": "最低的土地价格是{value} MANA"
+      "maximum_expiration": "截止日期是 {date}",
+      "maximum_land_price": "地块最高价是 {value} MANA",
+      "minimum_expiration": "最短有效期限为 {date}",
+      "minimum_land_price": "地块最低价是 {value} MANA"
     },
     "expiration": "到期时间",
-    "expiration_placeholder": "此块上架待售土地的到期时间",
-    "list_land": "待售虚拟土地上架",
+    "expiration_placeholder": "待售截止日期",
+    "list_land": "地块上架出售",
     "please_authorize":
-      "您需要前往设置页面{settings_link}并授权虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
+      "您需要在设置页面{settings_link}授权委托虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
     "price": "价格",
-    "price_placeholder": "此虚拟地块以MANA结算的价格",
-    "set_land_price": "为{parcel_name}设置价格和到期日期"
+    "price_placeholder": "此地块的 MANA 价格",
+    "set_land_price": "为{parcel_name}设置价格和截止日期"
   },
   "parcel_tags": {
-    "adjacent": "邻",
+    "adjacent": "路边",
     "district": "小区",
     "plaza": "广场",
-    "proximity": "{distance}包裹离开",
+    "proximity": "距离 {distance} 个地块",
     "road": "路"
   },
   "parcel_transfer": {
@@ -250,59 +250,59 @@
     "unknown_error": "发生未知错误，详情如下。"
   },
   "profile_page": {
-    "empty": "用户没有{content}",
+    "empty": "用户尚无{content}",
     "on_sale": "出售"
   },
   "publication": {
-    "acquired_at": "在{date}收购",
+    "acquired_at": "获得日期 {date}",
     "canceled": "已取消",
     "sold": "已售出",
     "view": "查看"
   },
   "settings": {
-    "approve_mana": "授权{marketplace_contract_link}以您的名义操作MANA",
-    "approve_mana_check": "检查授权MANA使用到市场合同",
-    "approve_mortgage_mana": "授权{mortgage_contract_link}代表您操作MANA",
-    "approve_mortgage_rcn": "授权{mortgage_contract_link}代表您运行RCN",
+    "approve_mana": "授权{marketplace_contract_link}以您的名义操作 MANA",
+    "approve_mana_check": "检查虚拟市场合约使用 MANA 的授权",
+    "approve_mortgage_mana": "授权{mortgage_contract_link}代您操作 MANA",
+    "approve_mortgage_rcn": "授权{mortgage_contract_link}代您操作 RCN",
     "authorization": "授权",
-    "authorize": "授权{marketplace_contract_link}在您的行为中操作LAND",
-    "authorize_land_check": "勾选并授权虚拟市场合约的土地使用",
-    "disapprove_mana_check": "取消选中不授权市场合同的MANA使用",
-    "mana_approved": "您已授权{marketplace_contract_link}以您的名义操作MANA",
+    "authorize": "授权{marketplace_contract_link}代您操作土地",
+    "authorize_land_check": "勾选并授权虚拟市场合约使用土地",
+    "disapprove_mana_check": "取消选中不授权市场合同使用 MANA",
+    "mana_approved": "您已授权{marketplace_contract_link}以您的名义操作 MANA",
     "marketplace_contract": "虚拟市场合约",
-    "mortgage_creator_contract": "抵押贷款创建者合同",
-    "mortgage_manager_contract": "抵押经理合同",
+    "mortgage_creator_contract": "抵押创建者合约",
+    "mortgage_manager_contract": "抵押管理合约",
     "pending_tx": "您有待处理的交易",
-    "unauthorize_land_check": "取消勾选取消授权市场合约的虚拟土地使用",
+    "unauthorize_land_check": "取消勾选取消授权市场合约使用虚拟土地",
     "you_approved_mortgage_mana":
-      "您已授权{mortgage_contract_link}代表您操作MANA",
+      "您已授权{mortgage_contract_link}代表您操作 MANA",
     "you_approved_mortgage_rcn":
-      "您已授权{mortgage_contract_link}代表您运营RCN",
-    "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作LAND"
+      "您已授权{mortgage_contract_link}代表您运营 RCN",
+    "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作 LAND"
   },
   "sign_in": {
     "account_unlocked": "确保您的帐户已解锁",
     "options":
-      "首先，你需要一个安全的地方来保存你的土地。您可以使用{metamask_link}扩展程序或像{ledger_nano_link}这样的硬件钱包。"
+      "首先，您需要使用钱包来安全地管理地块。可以使用{metamask_link}扩展程序或像{ledger_nano_link}这样的硬件钱包。"
   },
   "transaction": {
-    "approved": "您授权{marketplace_contract_link}以您的名义操作MANA",
-    "authorize": "您有{action} {marketplace_contract_link}以您的名义操作LAND",
-    "buy": "您买入了{parcel_link}地块",
+    "approved": "您授权{marketplace_contract_link}以您的名义操作 MANA",
+    "authorize": "您{action} {marketplace_contract_link}以您的名义操作 LAND",
+    "buy": "您购买了{parcel_link}地块",
     "buy_mana": "你已经买了{mana} MANA",
     "cancel": "您取消了{parcel_link}上的{publication_link}",
-    "cancel_mortgage": "您取消抵押贷款以购买包裹{parcel_link}",
-    "create_mortgage": "您要求抵押贷款购买包裹{parcel_link}",
-    "disapproved": "您未经授权{marketplace_contract_link}以您的名义操作MANA",
+    "cancel_mortgage": "您取消了购买地块{parcel_link}的抵押",
+    "create_mortgage": "您要求抵押以购买地块{parcel_link}",
+    "disapproved": "您未授权{marketplace_contract_link}以您的名义操作 MANA",
     "edit":
-      "您已为{parcel_link}地块编辑了名称\"{name}\"和描述\"{description}\"",
-    "manage": "您授予{address_link}更新{parcel_link}的内容的权限",
-    "manage_revoked": "您撤销了{address_link}更新{parcel_link}内容的权限",
-    "mortgage_mana": "你{action} {mortgage_contract_link}代表你操作MANA。",
-    "mortgage_rcn": "您{action} {mortgage_contract_link}代表您运营RCN。",
+      "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
+    "manage": "您授权{address_link}更新{parcel_link}上的内容",
+    "manage_revoked": "您撤销了允许{address_link}更新{parcel_link}内容的授权",
+    "mortgage_mana": "你{action} {mortgage_contract_link}代表你操作 MANA。",
+    "mortgage_rcn": "您{action} {mortgage_contract_link}代表您运营 RCN。",
     "publish": "您发布了{parcel_link}地块",
     "transfer": "您已将{parcel_link}转让给{owner_link}",
-    "transfer_mana": "您将{mana}个MANA转移到{address_link}"
+    "transfer_mana": "{mana} 个 MANA 已转帐至{address_link}"
   },
   "transaction_status": {
     "idle": {
@@ -311,17 +311,17 @@
     "parcel": {
       "still_pending": "{parcel_name}仍然有{transactions_count}个待处理的交易。"
     },
-    "see_activity": "要查看您的交易记录，请访问您的{activity_link}。",
+    "see_activity": "要查看您的交易记录，请访问 {activity_link}。",
     "text": {
-      "failed": "您的交易失败，您可以尝试发送新的交易。",
+      "failed": "交易失败，您可以发起新的交易重试。",
       "pending": "交易正在等待确认。"
     }
   },
   "transfer_mana": {
-    "action": "转让",
+    "action": "转帐",
     "current_balance": "您目前的余额是{balance}",
-    "irreversible": "请记住，转让MANA是一项不可逆转的行动。",
+    "irreversible": "注意，MANA 转帐不能回退或撤消。",
     "own_address_warning": "这是你自己的地址！",
-    "title": "转移MANA"
+    "title": "MANA 转帐"
   }
 }
