--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -140,6 +140,9 @@
     "interest_rate_placeholder": "Tasa de interés",
     "oracle": "Dirección del contrato de Oracle",
     "outstanding_amount": "Monto pendiente",
+    "partial_payment": "Pago parcial",
+    "partial_payment_desc":
+      "Está por hacer un pago parcial de la hipoteca para comprar el terreno {parcel_name}",
     "pay": "Paga",
     "payable": "Pagadero a",
     "payable_placeholder": "Pagable en días",
@@ -331,6 +334,8 @@
       "Usted {action} el {mortgage_contract_link} para operar MANA en su nombre.",
     "mortgage_rcn":
       "Usted {action} el {mortgage_contract_link} para operar RCN en su nombre.",
+    "pay_mortgage":
+      "Hizo un pago parcial de {amount} MANA por la hipoteca para comprar el paquete {parcel_link}",
     "publish": "Has publicado {parcel_link}",
     "transfer": "Has transferido {parcel_link} a {owner_link}",
     "transfer_mana": "Has transferido {mana} MANA a {address_link}"
