--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -58,6 +58,7 @@
     "subtitle": "이름과 설명을 설정하고 재산에 대한 소포를 편집하십시오."
   },
   "estate_select": {
+    "description": "{x}, {y}에서 시작하여 인접한 소포를 선택하십시오.",
     "selection": "새 부동산에 대한 소포를 선택하십시오."
   },
   "footer": {
