feat: create estate UI (#224)
* feat: create locations, route and action button of estate creation

* feat: copy parcel detail page to build new create estate page (without redux)

* feat: move isOwner func to parcel utils to be reused

* fix: support multiselection on map

* feat: map actions to redux, setup buttons and select parcels on click

* fix: selection handling on plaza fixed

* feat: disable continue button on estate creation when 1 or less parcel selected

* fix: lint files

* fix: add radix to parseInt calls

* feat: create initial saga, reducer and actions of estates

* fix: correctly use new isOwner func on parcel editing

* feat: change estate creation component to a controlled selector component

* fix: run autolinting

* fix: use node path instead of relative at EditParcelPage

* feat: use array of coordstype on estate select proptypes

* feat: create edit estate modal component

* fix: delete dev console.logs

* feat: create center and zoom for estate preview

* feat: only select neighbours parcels

* feat: send new created estate to redux

* chore: autolint

* chore: add radix parameter to estate modal parse int

* feat: create estateType and modify parcelType

* feat: use estateType on estate page components

* feat: create selectors, EstateCard with EstateTab

* fix: parseInt of estate select props to fit estateType

* fix: correctly iterate through estates to render EstateCards

* feat: create redux cycle for address estate fetchting

* fix: remove useless await on return of async functions and lint

* feat: make Asset findByOwner a generic query

* feat: connect backend to redux

* fix: correctly render estate backend model to frontend

* fix: uncomment 0 size estate filter on profilepage

* feat: add date to EstateCard and start the ParcelTags with estates support

* fix: revert and rewrite findByOwner of Asset.js to support estates

* fix: use new PublicationQuery on Parc

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -47,6 +47,17 @@
     "invalid":
       "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
   },
+  "estate_edit": {
+    "description": "Description",
+    "edit_estate": "Edit Estate",
+    "name": "Name",
+    "subtitle":
+      "Set a name and description, and edit the parcels for your estate."
+  },
+  "estate_select": {
+    "description": "Select adjacent parcels beginning from {x},{y}",
+    "selection": "Select the parcels for your new Estate"
+  },
   "footer": {
     "color_key": "Color Key",
     "copyright": "© 2018 Decentraland. All rights reserved.",
@@ -55,6 +66,7 @@
     "terms": "Terms & Conditions"
   },
   "global": {
+    "acquired_at": "Acquired at {date}",
     "activity": "Activity",
     "address_placeholder": "Example: {address}",
     "atlas": "Atlas",
@@ -68,7 +80,11 @@
     "confirm": "Confirm",
     "connect": "Connect",
     "connecting": "Connecting",
+    "continue": "Continue",
     "contributions": "Contributions",
+    "created_at": "Created at {date}",
+    "estate": "Estate",
+    "estates": "Estates",
     "expired_at": "Expired {time}",
     "expires_in": "Expires {time}",
     "expires_in_more_than_years": "Expires in over {years} years",
@@ -171,6 +187,7 @@
   "parcel_detail": {
     "actions": {
       "cancel": "Cancel sale",
+      "create_estate": "Create Estate",
       "edit": "Edit",
       "permissions": "Permissions",
       "sell": "Sell",
@@ -259,7 +276,6 @@
     "on_sale": "On Sale"
   },
   "publication": {
-    "acquired_at": "Acquired at {date}",
     "canceled": "Canceled",
     "sold": "Sold",
     "view": "View"
